--- a/tpFilRouge/filsRouge.html
+++ b/tpFilRouge/filsRouge.html
@@ -80,23 +80,24 @@
             <div class="ligne">
                 <section>
                     <i class="fa-solid fa-id-badge" style="color: #33cbf5; font-size: 70px;"></i>
-                    <span class="material-symbols-outlined"> home </span>
-                    <p>Trattoria San Pietro</p>
+                   
+                    <p> <span class="material-symbols-outlined"> home </span>Trattoria San Pietro</p>
                 </section>
-           
             </div>
             <div class="ligne">
                 <section>
                     <i class="fa-light fa-location-dot" style="color: #6dabf5; font-size: 70px;"></i>
-                    <span class="material-symbols-outlined"> assistant_navigation </span>
-                    <p>Via S. Pietro, 95, <br> 35139 Padova PD, <br>Italie</p>
+                    <p> Via S. Pietro, 95, <br>
+                        <span class="material-symbols-outlined"> assistant_navigation </span> 35139 Padova PD, <br>Italie</p>
                 </section>
             </div>
             <div class="ligne">
                 <section>
                     <i class="fa-regular fa-mobile" style="color: #6dabf5; font-size: 70px;"></i>
-                    <span class="material-symbols-outlined">phone_in_talk </span>
-                    <a href="tel:+390498760330">+390498760330</a>
+                    <a href="tel:+390498760330">
+                        <span class="material-symbols-outlined">phone_in_talk </span>
+                        +390498760330
+                    </a>
                 </section>
             </div>
         </section>
