--- a/horloge/horloge.html
+++ b/horloge/horloge.html
@@ -13,6 +13,8 @@
         <div class="second" id="second"></div>
     </div>
 
+    <div id="current-time"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
