--- a/horloge/horloge.html
+++ b/horloge/horloge.html
@@ -13,6 +13,15 @@
         <div class="second" id="second"></div>
     </div>
 
+    <div id="current-time">
+        <span id="hour-digit-1">0</span>
+        <span id="hour-digit-2">0</span>:
+        <span id="minute-digit-1">0</span>
+        <span id="minute-digit-2">0</span>:
+        <span id="second-digit-1">0</span>
+        <span id="second-digit-2">0</span>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
